🔧 Fix isort/Black compatibility issues
- Configure isort to use Black profile for compatibility
- Update GitHub Actions to use --profile black for isort
- Fix import sorting conflicts between tools
- All formatting checks should now pass consistently

Resolves GitHub Actions import sorting failures.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Check import sorting with isort
       run: |
-        isort --check-only day_supply_national
+        isort --profile black --check-only day_supply_national
 
     - name: Test package import
       run: |
