--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Check import sorting with isort
       run: |
-        isort --check-only --diff day_supply_national
+        isort --profile black --check-only --diff day_supply_national
 
     - name: Type checking with mypy
       run: |
