--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "pandas>=1.5.0",
     "numpy>=1.21.0",
     "python-dateutil>=2.8.0",
-    "pytz>=2021.1"
+    "pytz>=2021.1",
+    "setuptools>=45.0"
 ]
 
 [project.urls]
