--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,7 @@ include CHANGELOG.md
 include CONTRIBUTING.md
 include PACKAGE_SUMMARY.md
 include requirements.txt
-recursive-include day_supply_national/data *.csv
+recursive-include paas_extractor/data *.csv
 recursive-include docs *.md
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
