--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -26,23 +26,23 @@ jobs:
 
     - name: Run flake8
       run: |
-        flake8 day_supply_national --count --statistics --format=github
+        flake8 paas_extractor --count --statistics --format=github
 
     - name: Check code formatting with black
       run: |
-        black --check --diff day_supply_national
+        black --check --diff paas_extractor
 
     - name: Check import sorting with isort
       run: |
-        isort --profile black --check-only --diff day_supply_national
+        isort --profile black --check-only --diff paas_extractor
 
     - name: Type checking with mypy
       run: |
-        mypy day_supply_national --ignore-missing-imports || echo "Type checking completed with warnings"
+        mypy paas_extractor --ignore-missing-imports || echo "Type checking completed with warnings"
 
     - name: Security check with bandit
       run: |
-        bandit -r day_supply_national -f json -o bandit-report.json || echo "Security scan completed"
+        bandit -r paas_extractor -f json -o bandit-report.json || echo "Security scan completed"
 
     - name: Upload bandit report
       uses: actions/upload-artifact@v4
@@ -85,8 +85,8 @@ jobs:
     - name: Validate package metadata
       run: |
         python -c "
-        from day_supply_national import __version__, __author__, __email__
-        assert __version__ == '2.0.6', f'Version mismatch: {__version__}'
+        from paas_extractor import __version__, __author__, __email__
+        assert __version__ == '2.0.7', f'Version mismatch: {__version__}'
         assert __author__ == 'Abdulhaleem Osama', f'Author mismatch: {__author__}'
         assert __email__ == 'haleemborham3@gmail.com', f'Email mismatch: {__email__}'
         print('Package metadata validation passed')
