--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "paas-national-prescription-extractor"
-version = "2.0.6"
+version = "2.0.7"
 description = "PAAS National - Comprehensive prescription data extraction and standardization system for day supply, quantity, and sig processing"
 readme = "README.md"
 license = {text = "MIT"}
@@ -12,7 +12,7 @@ authors = [
     {name = "Abdulhaleem Osama", email = "haleemborham3@gmail.com"}
 ]
 maintainers = [
-    {name = "TJMLabs", email = "haleemborham3@gmail.com"}
+    {name = "TJMLabs", email = "abdulhaleem@tjmlabs.com"}
 ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
@@ -44,13 +44,13 @@ Repository = "https://github.com/HalemoGPA/paas-national-prescription-extractor"
 "Bug Reports" = "https://github.com/HalemoGPA/paas-national-prescription-extractor/issues"
 
 [project.scripts]
-paas-extractor = "day_supply_national.cli:main"
-paas-demo = "day_supply_national.demo:main"
-paas-test = "day_supply_national.test_suite:main"
+paas-extractor = "paas_extractor.cli:main"
+paas-demo = "paas_extractor.demo:main"
+paas-test = "paas_extractor.test_suite:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["day_supply_national*"]
+include = ["paas_extractor*"]
 
 [tool.setuptools.package-data]
-day_supply_national = ["data/*.csv"]
+paas_extractor = ["data/*.csv"]
