--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,9 +48,9 @@ jobs:
         suite = ComprehensiveTestSuite()
         results = suite.run_all_tests()
         if results['failed'] > 0:
-            print(f'Tests failed: {results[\"failed\"]} failures')
+            print('Tests failed: ' + str(results['failed']) + ' failures')
             exit(1)
-        print(f'All {results[\"total_tests\"]} tests passed!')
+        print('All ' + str(results['total_tests']) + ' tests passed!')
         "
 
     - name: Build package
